--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   const srtUrl = "OAV2.srt";
 
   const tooltipDictionary = {
-    "Vascongadas": "Meaning the Basque provinces, an old term used during the Franco dictatorship to remove the term country from the region’s name (el País Vasco)."
+    "Vascongadas": "Meaning the Basque provinces, an old term used during the Franco dictatorship to remove the term country from the region’s name."
   };
 
   let subtitles = [];
