--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   const srtUrl = "OAV2.srt";
 
   const tooltipDictionary = {
-    "Vascongadas": "Used during the Franco dictatorship, meaning the Basque provinces, to remove the term 'country' from the region’s name."
+    "Abertzale": "Basque nationalists"
   };
 
   let subtitles = [];
