--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   const srtUrl = "OAV2.srt";
 
   const tooltipDictionary = {
-    "Abertzale": "A Basque nationalist"
+    "Abertzale": "Translates to ‘patriot’, specifically referring to Basque nationalists."
   };
 
   let subtitles = [];
